# MedicalTriageSystem

./: CMakeLists.txt  README.md  main.cpp  requirements.txt
.github/workflows/: qodana_code_quality.yml
analysis/: eda_triage_medical.py
bat/: build.bat  clean.bat  main.bat  run.bat  train_model.bat
data/: diseases.csv
include/: Patient.h  TriageSystem.h  utils.h
scripts/: train_model.py  triage_model.py
src/: Patient.cpp  TriageSystem.cpp  utils.cpp
